# cmo.dog

./: .env.example  .gitignore  Dockerfile  README.md  build.sh  pyproject.toml  start-docker.sh  start.sh  tail-aws-logs.sh
app/: __init__.py  config.py  guardrail_state.py  main.py  orchestrator.py  schemas.py
app/routes/: admin.py  auth.py  billing.py  monitors.py  preferences.py
app/services/: intent_guard.py  monitor_scheduler.py  monitor_service.py  run_history_service.py  user_service.py
scripts/: create_assistants.py  model_list.py  smoke_chat.sh  smoke_stream.sh  smoke_test.sh
terraform/: backend.tf  main.tf  outputs.tf  variables.tf
terraform/bootstrap/: state-bucket.tf
terraform/modules/apprunner/: main.tf  variables.tf
web/: next.config.ts  package-lock.json  package.json
web/src/app/: error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx
web/src/app/admin/: page.tsx
web/src/app/billing/: page.tsx
web/src/app/history/: page.tsx
web/src/app/run/[runId]/: page.tsx
web/src/app/stream/[runId]/: route.ts
web/src/app/stream/admin-shell/[sessionId]/: route.ts
web/src/components/: BackboardBadge.tsx  MonthlyMonitorModal.tsx  PdfReportButton.tsx  ReleaseNotesModal.tsx  SettingsModal.tsx  conditional-header.tsx  fix-drawer.tsx  header.tsx  paw-prints.tsx  report-modal.tsx  terminal.tsx  theme-init.tsx  theme-toggle.tsx
web/src/components/auth/: SignupModal.tsx
web/src/components/billing/: UpgradeModal.tsx
web/src/lib/: api.ts  generate-pdf.ts
