[project]
name = "backboard-cmo"
version = "0.1.1"
description = "AI CMO Terminal — Backboard agents for traffic and users"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "backboard-sdk>=1.5.0",
    "httpx>=0.27.0",
    "pydantic>=2.0",
    "sse-starlette>=2.0",
    "python-dotenv>=1.0",
]

[project.scripts]
cmo-api = "app.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]

[dependency-groups]
dev = [
    "pillow>=12.1.1",
]
